--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
       - dev
-
+      - chore/build-all
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -48,7 +48,7 @@ jobs:
       contents: write
       discussions: write
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/chore/build-all'
     steps:
       - name: Download built binaries
         uses: actions/download-artifact@v4
@@ -67,6 +67,8 @@ jobs:
         with:
           name: nerdminer-prerelease-${{ needs.build.outputs.version }}
           tag_name: nerdminer-prerelease-${{ needs.build.outputs.version }}
+          target_commitish: ${{ github.sha }}
+          generate_release_notes: true
           prerelease: true
           fail_on_unmatched_files: true
           files: ${{ github.workspace }}/binaries/*.bin
